--- a/Travail_personnel.ipynb
+++ b/Travail_personnel.ipynb
@@ -112,15 +112,7 @@
     "\\right.\n",
     "$$\n",
     "\n",
-    "Dans notre problème les équations différentielles à résoudre sont celles sur les vitesses angulaires $\\dot\\theta_1$ et $\\dot\\theta_2$ et sur les forces $\\dot{p}_{\\theta_1}$ et $\\dot{p}_{\\theta_2}$. Il suffit alors d'appliquer l'algorithme : on initialise le pas *h*, la durée *T*, les conditions initiales et les fonctions $\\dot\\theta_i$ et $\\dot{p}_{\\theta_i}$. Puis, tant que le temps écoulé est inférieur à la durée, on calcule on calcule les coefficients et on réitère.\n",
-    "\n",
-    "# Bibliographie \n",
-    "\n",
-    "- La résolution du problème du double pendule est intégralement tirée de : https://en.wikipedia.org/wiki/Double_pendulum\n",
-    "\n",
-    "- Méthode RK4 : https://femto-physique.fr/omp/runge-kutta.php, https://en.wikipedia.org/wiki/Runge%E2%80%93Kutta_methods, http://www.cinam.univ-mrs.fr/klein/teach/mip/numeriq/node46.html\n",
-    "\n",
-    "- Practical Numerical Methods with Python\n"
+    "Dans notre problème les équations différentielles à résoudre sont celles sur les vitesses angulaires $\\dot\\theta_1$ et $\\dot\\theta_2$ et sur les forces $\\dot{p}_{\\theta_1}$ et $\\dot{p}_{\\theta_2}$. Il suffit alors d'appliquer l'algorithme : on initialise le pas *h*, la durée *T*, les conditions initiales et les fonctions $\\dot\\theta_i$ et $\\dot{p}_{\\theta_i}$. Puis, tant que le temps écoulé est inférieur à la durée, on calcule on calcule les coefficients et on réitère."
    ]
   },
   {
